# python-project-lvl4

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
labels/: models.py  tests.py  translations.py
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: models.py  tests.py  translations.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: statuses_list.html
task_manager/: constants.py  settings.py  translations.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: forms.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/labels/templates/labels/: labels_list.html
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0002_alter_status_name.py
task_manager/tasks/: forms.py  models.py  tests.py  translations.py  views.py
task_manager/templates/: index.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
tasks/: forms.py  models.py  tests.py  translations.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_labels.py
tasks/templates/tasks/: tasks_details.html  tasks_list.html
templates/: base.html  delete.html  form.html  index.html
users/: custom_mixins.py  translations.py  views.py
users/fixtures/: tasks.json
users/migrations/: 0001_initial.py
users/templates/users/: create_user.html  users.html
(+5 files in other folders)
