[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["VasiliyBogdanov <moproq@icloud.com>"]

[tool.poetry.dependencies]
dj-database-url = "0.5.0"
django = "^4"
gunicorn = "20.1.0"
python = "^3.8"
python-dotenv = "0.20.0"
whitenoise = "6.2.0"


[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
